--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 ">
                     <div class="section-title text-center">
-                        <h2>Testimonial</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h2>Testimonials from the Content Crusade</h2>
+                        <p>The call to arms has been answered, and many a valiant brand has marched alongside me in the content crusade! Let their triumphant tales ring true:</p>
                     </div>
                 </div>
             </div>
@@ -412,16 +412,6 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="testimonials owl-carousel" data-ride="carousel">
-                        <!-- Single Testimonial -->
-                        <div class="single-testimonial text-center">
-                            <div class="testimonial-quote">
-                                <i class="fa fa-quote-right"></i>
-                            </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam nam suscipit similique quod eaque adipisci modi recusandae nesciunt veniam, ut, rem eligendi minima et, accusantium?</p>
-                            <h4>Aseven M <span>CEO - aseven.info</span></h4>
-
-                        </div>
-                        <!-- // Single Testimonial -->
                         <!-- Single Testimonial -->
                         <div class="single-testimonial text-center">
                             <div class="testimonial-quote">
@@ -456,8 +446,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 ">
                     <div class="section-title text-center">
-                        <h2>Contact Me</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <h2>Sound the Trumpet! Let Us Discuss.</h2>
+                        <p>The enemy of bland copy still casts a long shadow, but fear not! Your valiant quest for captivating content begins now. Here's how to join the crusade:</p>
                     </div>
                 </div>
             </div>
@@ -484,7 +474,7 @@
                             <textarea name="message" id="" class="form-control" required placeholder="Message"></textarea>
                         </div>
                         <div class="form-btn text-center">
-                            <button class="button" type="submit">Send Message</button>
+                            <button class="button" type="submit">SEND MESSAGE</button>
                             <p class="form-message"></p>
                         </div>
                     </form>
