--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 
                 <div class="collapse navbar-collapse main-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active"><a class="nav-link" href="#home">HOME</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">ABOUT</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="#about">HOME</a></li>
                         <li class="nav-item"><a class="nav-link" href="#service">SERVICE</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a></li>
                         <li class="nav-item"><a class="nav-link pr0" href="#contact">CONTACT</a></li>
@@ -80,11 +79,7 @@
                     <div class="about-bg" style="background-image:url(assets/images/about-bg.jpg)">
                         <!-- Social Link -->
                         <div class="social-aria">
-                            <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                            <a target="_blank" href="#"><i class="fab fa-instagram"></i></a>
-                            <a target="_blank" href="#"><i class="fab fa-pinterest"></i></a>
-                            <a target="_blank" href="#"><i class="fab fa-youtube"></i></a>
+                            <a target="_blank" href="https://www.instagram.com/imran.copycraft/"><i class="fab fa-instagram"></i></a>
                         </div>
                         <!-- // Social Link -->
                     </div>
