--- a/index.html
+++ b/index.html
@@ -285,13 +285,13 @@
             </div>
             <div class="row portfolio">
                 <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix wp graphic">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-1.jpg)">
+                <div class="col-lg-4 col-md-6 mix wp email">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-1.png)">
                         <div class="portfolio-icon text-center">
-                            <a data-lightbox='lightbox' href="assets/images/portfolio/img-1.jpg"><i class="fas fa-expand-arrows-alt"></i></a>
+                            <a data-lightbox='lightbox' href="assets/images/portfolio/img-1.png"><i class="fas fa-expand-arrows-alt"></i></a>
                         </div>
                         <div class="portfolio-hover">
-                            <h4>Project <span>Name</span></h4>
+                            <h4>Email <span>CA is like ABCD</span></h4>
                         </div>
                     </div>
                 </div>
