--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                 </div>
                 <!-- // Single Portfolio -->
                 <!-- Single Portfolio -->
-                <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-2.jpg)">
+                <div class="col-lg-4 col-md-6 mix logo web graphic email">
+                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/img-3.png)">
                         <div class="portfolio-icon text-center">
                             <a data-lightbox='lightbox' href="assets/images/portfolio/img-2.jpg"><i class="fas fa-expand-arrows-alt"></i></a>
                         </div>
