--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="UTF-8">
-    <title>Imran Khan</title>
-
+    <title>Copywriting Crusader</title>
+    <meta name="keywords" content="copywrite, copywiting, imran khan, imran craft, imran copy, imran copy craft, imrancraft, imrancopycraft, copywriting crusader, crusader, headlines, sales page, salespage, website copy, websitecopy, product discription">
+    <meta name="description" content="Hello, I am Copywriting Crusader. Is your website content drier than a week-old croissant? Are your conversion rates about as exciting as watching paint dry? Fear not, weary marketer, for I arrive – the Copywriting Crusader!">
+    <meta name="google-site-verification" content="9TnqD4Pc0C5ImjY43M1yKcitkwmJWK2fes4xAcBaoi4" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
     <!-- ====== Google Fonts ====== -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
+
 
     <!-- ====== ALL CSS ====== -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
