--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 
 
 
-     <!-- ====== ALL JS ====== -->
+     <!-- ====== ALL JSs ====== -->
    <script src="assets/js/jquery-3.3.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/lightbox.min.js"></script>
