--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png">
     <!-- ====== Google Fonts ====== -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
-
+    
+    <meta name="google-site-verification" content="jAnOiKGjhVlpMqPLn6hVeXGBpFAFZt6kVcpAg0nNvxM" />
 
     <!-- ====== ALL CSS ====== -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
